first plugin / module back to a working state